Fixed overflow-y on body issue

--- a/app/assets/scss_backend/_base.scss
+++ b/app/assets/scss_backend/_base.scss
@@ -15,10 +15,6 @@ html, body {
   overflow: hidden;
 }
 
-body {
-  overflow-y: scroll;
-}
-
 /////////////////////////////////////////////////////////////////////////// Text
 //------------------------------------------------------------------------------
 input, textarea { outline: none; padding: 0; }
